--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "lovedicons",
   "version": "0.0.1-0",
   "description": "These icons are loved by developers!",
-  "main": "index.js",
+  "main": "react/index.js",
   "scripts": {
-    "clean": "rimraf outline solid package *.tgz",
+    "clean": "rimraf outline solid react src sprite package *.tgz",
     "export": "figma-export use-config figma.config.js",
     "test": "node test.js",
-    "build": "run-s clean export",
+    "bundle": "rollup --config",
+    "build": "run-s clean export bundle",
     "np": "np",
-    "release": "run-s build np"
+    "release": "run-s build np",
+    "jsdelivr": "sprite/outline.svg",
+    "cdn": "sprite/outline.svg",
+    "unpkg": "sprite/outline.svg"
   },
   "homepage": "https://github.com/iamakbarsha1/lovedicons#readme",
   "repository": {
@@ -18,8 +22,13 @@
   },
   "files": [
     "outline/",
-    "solid/"
+    "solid/",
+    "react/",
+    "sprite/"
   ],
+  "peerDependencies": {
+    "react": ">= 16"
+  },
   "bugs": {
     "url": "https://github.com/iamakbarsha1/lovedicons/issues"
   },
@@ -38,11 +47,18 @@
   "devDependencies": {
     "@figma-export/cli": "^4.4.0",
     "@figma-export/output-components-as-svg": "^4.4.0",
+    "@figma-export/output-components-as-svgr": "^4.4.0",
+    "@figma-export/output-components-as-svgstore": "^4.4.0",
     "@figma-export/transform-svg-with-svgo": "^4.4.0",
+    "@rollup/plugin-typescript": "^8.4.0",
+    "@types/react": "^18.0.17",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.1",
     "np": "^7.6.2",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2"
+    "react": "^18.2.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.78.1",
+    "typescript": "^4.8.2"
   }
 }
