--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lovedicons",
-  "version": "0.0.1-0",
+  "version": "0.1.0",
   "description": "These icons are loved by developers!",
   "main": "react/index.js",
   "scripts": {
