--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "lovedicons",
   "version": "0.1.1",
   "description": "These icons are loved by developers!",
-  "main": "react/index.js",
+  "main": "dist",
+  "module": "o",
   "scripts": {
-    "clean": "rimraf outline solid react src sprite package *.tgz",
+    "clean": "rimraf figmaIcons outline solid o s react node dist src sprite package *.tgz",
     "export": "figma-export use-config figma.config.js",
+    "svgr": "svgr --icon --title-prop --replace-attr-values '#fff=currentColor' -d src figmaIcons",
+    "svgrBundle": "rollup -c",
+    "svgrBuild": "run-s clean export svgr svgrBundle",
+    "svgrRelease": "run-s svgrBuild np",
     "test": "node test.js",
-    "bundle": "rollup --config",
+    "bundle": "rollup -c",
     "build": "run-s clean export bundle",
     "np": "np",
     "release": "run-s build np",
@@ -45,12 +50,19 @@
   "author": "Akbar Sha S <iamakbarsha1@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
     "@figma-export/cli": "^4.4.0",
     "@figma-export/output-components-as-svg": "^4.4.0",
     "@figma-export/output-components-as-svgr": "^4.4.0",
     "@figma-export/output-components-as-svgstore": "^4.4.0",
     "@figma-export/transform-svg-with-svgo": "^4.4.0",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.4.0",
+    "@svgr/cli": "^6.3.1",
     "@types/react": "^18.0.17",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.1",
@@ -59,6 +71,13 @@
     "react": "^18.2.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.78.1",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-filesize": "^9.1.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.18.9"
   }
 }
