--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": [
     ["@babel/preset-env", { "targets": "defaults" }],
-    "@babel/preset-react"
+    "@babel/preset-react" // old one
+    // ["@babel/preset-react", { "runtime": "automatic" }]
   ]
 }
