--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "dist",
   "module": "o",
   "scripts": {
-    "clean": "rimraf figmaIcons outline solid o s react node dist src sprite package *.tgz",
+    "clean": "rimraf dist figmaIcons outline solid o s react node sprite package *.tgz",
     "export": "figma-export use-config figma.config.js",
-    "svgr": "svgr --icon --title-prop --replace-attr-values '#fff=currentColor' -d src figmaIcons",
+    "svgrCLI": "svgr --icon --title-prop --replace-attr-values '#fff=currentColor' -d src figmaIcons",
+    "svgrAPI": "svgr --config-file svgr.config.js -d src figmaIcons",
     "svgrBundle": "rollup -c",
-    "svgrBuild": "run-s clean export svgr svgrBundle",
+    "svgrBuild": "run-s clean export svgrAPI svgrBundle",
     "svgrRelease": "run-s np",
     "test": "node test.js",
     "bundle": "rollup -c",
@@ -26,10 +27,7 @@
     "url": "git+https://github.com/iamakbarsha1/lovedicons.git"
   },
   "files": [
-    "outline/",
-    "solid/",
-    "react/",
-    "sprite/"
+    "src"
   ],
   "peerDependencies": {
     "react": ">= 16"
@@ -39,8 +37,13 @@
   },
   "keywords": [
     "reactjs",
+    "react",
     "nextjs",
+    "javascript",
+    "js",
+    "lovedicons",
     "loved",
+    "love",
     "icons",
     "svg",
     "react",
